--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </style>
 </head>
 <body>
-    <h1>Find SAM Alumni Who Are Willing to Network</h1>
+    <h1>Find UVA SAM Alumni Who Are Willing to Network</h1>
     <ol>
         <li>Find a name</li>
         <li>Click connect</li>
